--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -14,3 +14,4 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy --project-name=gym-app
+          dir: ./
