--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy --project-name=gym-app gym-app
+          command: pages publish dist
