--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -15,24 +15,24 @@
 #           accountId: 
 #           command: pages deploy dist
 
-# on: [push]
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       deployments: write
-#     name: Deploy to Cloudflare Pages
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       # Run your project's build step
-#       # - name: Build
-#       #   run: npm install && npm run build
-#       - name: Publish
-#         uses: cloudflare/pages-action@1
-#         with:
-#           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-#           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-#           projectName: gym-app # e.g. 'my-project'
-#           directory: dist # e.g. 'dist'
+on: [push]
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
+    name: Deploy to Cloudflare Pages
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      # Run your project's build step
+      # - name: Build
+      #   run: npm install && npm run build
+      - name: Publish
+        uses: cloudflare/pages-action@1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: gym-app # e.g. 'my-project'
+          directory: dist # e.g. 'dist'
