--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -36,3 +36,4 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           # projectName: # # e.g. 'my-project'
           # directory: dist # e.g. 'dist'
+          command: pages deploy dist
