--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -30,7 +30,7 @@ jobs:
       # - name: Build
       #   run: npm install && npm run build
       - name: Publish
-        uses: cloudflare/pages-action@2.0.0
+        uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
