--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -15,25 +15,51 @@
 #           accountId: 
 #           command: pages deploy dist
 
+# on: [push]
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       deployments: write
+#     name: Deploy to Cloudflare Pages
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
+#       # Run your project's build step
+#       # - name: Build
+#       #   run: npm install && npm run build
+#       - name: Publish
+#         uses: cloudflare/wrangler-action@2.0.0
+#         with:
+#           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+#           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+#           projectName: gym-app # e.g. 'my-project'
+#           # directory: dist # e.g. 'dist'
+#           # command: pages deploy dist
+
 on: [push]
+
 jobs:
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       deployments: write
-    name: Deploy to Cloudflare Pages
+    name: Publish to Cloudflare Pages
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Run your project's build step
-      # - name: Build
-      #   run: npm install && npm run build
-      - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+
+      # Run a build step here if your project requires
+
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: gym-app # e.g. 'my-project'
-          # directory: dist # e.g. 'dist'
-          # command: pages deploy dist
+          projectName: gym-app
+          directory: dist
+          # Optional: Switch what branch you are publishing to.
+          # By default this will be the branch which triggered this workflow
+          branch: main
