--- a/.github/workflows/wrangler-publish.yml
+++ b/.github/workflows/wrangler-publish.yml
@@ -58,8 +58,8 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: gym-app
-          directory: dist
+          projectName: dist
+          directory: index
           # Optional: Switch what branch you are publishing to.
           # By default this will be the branch which triggered this workflow
           branch: main
